Wrap tables to fix Loader position.

--- a/src/table.styl
+++ b/src/table.styl
@@ -3,6 +3,10 @@
 .table-wrapper {
     border: 1px solid $table-border-color;
     position: relative;
+
+    > .table-area {
+        position: relative;
+    }
 }
 
 .table {
